deployment-authentication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-api
  template:
    metadata:
      labels:
        app: authentication-api
    spec:
      containers:
        - name: authentication-api
          image: ghcr.io/<GITHUB_USERNAME>/gitstart/authenticationapi:latest
          ports:
            - containerPort: 8080
            - containerPort: 8081
