deployment-inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-api
  template:
    metadata:
      labels:
        app: inventory-api
    spec:
      containers:
        - name: inventory-api
          image: ghcr.io/<GITHUB_USERNAME>/gitstart//inventoryapi:latest
          ports:
            - containerPort: 8082
