deployment-product.yaml
# deployment-product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
        - name: product-api
          image: your-docker-registry/productapi:latest
          ports:
            - containerPort: 8083
