deployment-sql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-db
  template:
    metadata:
      labels:
        app: mssql-db
    spec:
      containers:
        - name: mssql-db
          image: mcr.microsoft.com/mssql/server
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: sql-data
              mountPath: /var/opt/mssql
      volumes:
        - name: sql-data
          persistentVolumeClaim:
            claimName: mssql-data-pvc
