service-authentication.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication-api
spec:
  selector:
    app: authentication-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
