service-rabbitmq.yaml

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP 
  ports:
    - port: 5672      # RabbitMQ messaging port
      targetPort: 5672
      name: rabbitmq
    - port: 15672     # RabbitMQ Management UI port
      targetPort: 15672
      name: rabbitmq-management
  selector:
    app: rabbitmq
