service-sql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-db
spec:
  selector:
    app: mssql-db
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: ClusterIP
